--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 
   <script type="text/javascript">
 jQuery(document).ready(function($) {
+  $('.facet-view-simple').facetview({
+    search_url: 'http://bibsoup.net/query?',
+    search_index: 'elasticsearch',
+    default_filters: ['journal','author','year'],
+    result_display_headers: ['title','journal','author'],
+    default_paging: {
+      from: 0,
+      size: 10
+    }
+  });
   // set up form
   $('.demo-form').submit(function(e) {
     e.preventDefault();
@@ -56,7 +66,11 @@ jQuery(document).ready(function($) {
       It's lets you easily embed a faceted browser and search front end into any web page. It also provides micro-framework you can build on when creating user interfaces to SOLR and ElasticSearch.
     </h4>
 
-    <h2>Demo</h2>
+    <h2>Simple Demo</h2>
+    <p>This uses a pre-configured endpoint and fields.</p>
+    <div class="facet-view-simple"></div>
+
+    <h2>More Complex Demo</h2>
     <p>Here we provide you with the option to supply a SOLR or ES endpoint. In
     normal usage you will configure the search endpoint when you initialize
     FacetView in your code.</p>
@@ -81,7 +95,7 @@ jQuery(document).ready(function($) {
     </form>
     <div class="facet-view-here"></div>
 
-    <h2>Use It</h2>
+    <h2>Use It Yourself</h2>
     <p>See the <a href="https://github.com/okfn/facetview#readme">README on the GitHub repo</a>.</p>
 
   </div>
