[refactor,#9][s]: switch to explicit inclusion of facetview.css (do not include via js).

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>FacetView</title>
   <link rel="stylesheet" href="vendorjs/bootstrap/1.4.0/bootstrap.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/facetview.css">
 
   <script type="text/javascript" src="vendorjs/jquery/1.6.2/jquery.js"></script>
   <script type="text/javascript" src="jquery.facetview.js"></script>
