[doc][xs]: hide more complex demo for the time being and ref demo from README.

--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@ jQuery(document).ready(function($) {
       It's lets you easily embed a faceted browser and search front end into any web page. It also provides micro-framework you can build on when creating user interfaces to SOLR and ElasticSearch.
     </h4>
 
-    <h2>Simple Demo</h2>
+    <h2>Demo</h2>
     <div class="facet-view-simple"></div>
 
+    <!--
     <h2>More Complex Demo</h2>
     <p>Here we provide you with the option to supply a SOLR or ES endpoint. In
     normal usage you will configure the search endpoint when you initialize
@@ -94,6 +95,7 @@ jQuery(document).ready(function($) {
       </fieldset>
     </form>
     <div class="facet-view-here"></div>
+    -->
 
     <h2>Use It Yourself</h2>
     <p>See the <a href="https://github.com/okfn/facetview#readme">README on the GitHub repo</a>.</p>
