adding range query option

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
   <script type="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>  
   
+  <link rel="stylesheet" href="vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.css">
+  <script type="text/javascript" src="vendor/jquery-ui-1.8.18.custom/jquery-ui-1.8.18.custom.min.js"></script>
+
   <link rel="stylesheet" href="css/facetview.css">
 
   <link rel="stylesheet" href="css/style.css">
