adding default record display

--- a/simple.html
+++ b/simple.html
@@ -30,7 +30,8 @@ jQuery(document).ready(function($) {
     facets: [
         {'field': 'publisher.exact', 'size': 100, 'order':'term', 'display': 'publisher'},
         {'field': 'author.name.exact', 'display': 'author'},
-        {'field': 'year.exact', 'display': 'year'}
+        {'field': 'year.exact', 'display': 'year'},
+        {'field': 'collection.exact', 'display': 'collection'},
     ],
     paging: {
       size: 10
