adding options to set the default operator to AND / OR, and adding an option to set the default_freetext_fuzzify to * or ~ or nothing

--- a/local.html
+++ b/local.html
@@ -38,7 +38,9 @@ jQuery(document).ready(function($) {
     },
     predefined_filters: {
         'owner.exact': {'term':{'owner.exact':'test'}}
-    }
+    },
+    default_operator: "AND",
+    default_freetext_fuzzify: "*"
   });
   });
 });
@@ -54,8 +56,6 @@ jQuery(document).ready(function($) {
 
 </head>
 <body>
-
-    <div class="facet-view-simple"></div>
 
     <div class="facet-view-simple"></div>
 
