added unit tests for getvalue using dotted notation

--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,8 @@
   <script src="vendor/qunit/1.12.0/qunit.js"></script>
   <script src="../jquery.facetview.original.js"></script>
 
-  <!-- unit tests here -->
+  <!-- unit tests -->
+  <script src="unit/helpers.js"></script>
 
 
 </head>
